* moved interceptors to seperate package
* made PayloadValidatingInterceptor more customizable (#SWS-43)
* add schemas property to PayloadValidatingInterceptor (#SWS-44)
* refactoring most of PayloadValidatingInterceptor into AbstractValidatingInterceptor

Package org.springframework.ws.endpoint.mapping
* moved EndpointMappings to seperate package
* removed SOAP-specific roles functionality

Package org.springframework.ws.soap
* improved content-type handling (#SWS-32)
* moved SOAP 1.1 specfics to separate package and interfaces
* SoapAction has been removed from SoapMessage, SoapActionEndpointMapping uses TransportRequest header

Package org.springframework.ws.soap.axiom
* add support for SAAJ 1.3
* added "payloadCaching" property to read the contents of SOAP bodies produced by the AxiomSoapMessageContextFactory in
  a non-buffering, read-once fashion.
* increased performance by keeping object references instead of creating new instances for every call

Package org.springframework.ws.soap.endpoint.interceptor
* added SoapEnvelopeLoggingInterceptor, which logs the entire SoapEnvelope

Package org.springframework.ws.soap.endpoint.interceptor
*

Package org.springframework.ws.soap.saaj
* add support for SAAJ 1.3
* increased performance by keeping object references instead of creating new instances for every call

Package org.springframework.ws.soap.saaj.support
* added SaajUtils.getVersion()

Package org.springframework.ws.soap.soap11
* moved SOAP 1.1 specifics to separate package and interfaces

Package org.springframework.ws.soap.soap12
* moved SOAP 1.2 specifics to separate package and interfaces

Package org.springframework.ws.transport
* added TransportContext, TransportRequest & TransportResponse

Package org.springframework.ws.transport.http
* removed J2EE 1.4 dependency (#SWS-31)
* renamed MessageHandlerAdapter to MessageEndpointHandlerAdapter

Package org.springframework.xml
* moved package to seperate jar file, since oxm now also depends on it
