@@ -17,7 +17,11 @@
         <fileSet>
              <directory>target/docs/api</directory>
              <outputDirectory>/docs/api</outputDirectory>
-           </fileSet>
+       </fileSet>
+        <fileSet>
+             <directory>../doc/target/docbkx</directory>
+             <outputDirectory>/docs/reference</outputDirectory>
+       </fileSet>
        <fileSet>
             <directory>../spring-ws-samples</directory>
             <outputDirectory>/samples</outputDirectory>
